--- a/src/components/intro/index.css
+++ b/src/components/intro/index.css
@@ -13,7 +13,7 @@
   width: 100%;
   height: 100%;
   z-index: -1;
-  background: url(../../../public/images/texture.webp);
+  background: url(../../assets/images/texture.webp);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
